--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background: #333;
+  background: rgb(26, 26, 26);
   color-scheme: only dark;
 }
 
