add dev analyzer
codesplit and add tooltip

add homerolled popup thing

add monster popup thing

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background: rgb(26, 26, 26);
+  background-color: rgb(4, 6, 8);
   color-scheme: only dark;
 }
 
@@ -12,9 +12,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   line-height: 1.42857143;
-  /* background: url("./Pine01.png") #333; */
-  /* background-repeat: no-repeat; */
-  /* height: 100vh; */
+  background-color: rgb(4, 6, 8);
 }
 
 * {
