move tile files
update monster colors

change monster status ui

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 @font-face {
   font-family: "NewtonSans";
   src: url("./font/NewtonSans-2015-11-04.woff2") format("woff2");
-  unicode-range: U+E000-EFFF, U+2600-26FF;
+  unicode-range: U+E000-EFFF, U+2600-26FF, U+1F700-1F77F;
 }
 
 .alchemy {
