--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,9 @@
 
 @font-face {
   font-family: "NewtonSans";
-  src: url("./font/NewtonSans-2015-11-04.woff2") format("woff2");
+  src: url("./font/NewtonSans-2015-11-04.ttf") format("truetype"),
+    url("./font/NewtonSans-2015-11-04.woff") format("woff"),
+    url("./font/NewtonSans-2015-11-04.woff2") format("woff2");
   unicode-range: U+E000-EFFF, U+2600-26FF;
 }
 
